--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #a1053b; }
+  background: #f3bdb1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6287cc; }
+  background: #bf0774; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b0664a; }
+  background: #e9d41c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b676ca; }
+  background: #8bc361; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0dfc41; }
+  background: #e78cf9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ac6e58; }
+  background: #d356e0; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d5bd24; }
+  background: #959911; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #705c55; }
+  background: #ef4c28; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9acf35; }
+  background: #3af650; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #295103; }
+  background: #67acca; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #431bd1; }
+  background: #f648bf; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #dfd47d; }
+  background: #85b4db; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #300e6c; }
+  background: #a9f9af; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d6164a; }
+  background: #0adae4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #49cf4c; }
+  background: #eac565; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #be7930; }
+  background: #20b233; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #18f3a4; }
+  background: #9e9a16; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5e081f; }
+  background: #f3a25c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e6b0a6; }
+  background: #a294c9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #38676d; }
+  background: #70a569; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #289eef; }
+  background: #90a1bd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fe8882; }
+  background: #1d7355; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b47289; }
+  background: #20a3a4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #38c6cc; }
+  background: #88c3a8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b5afd6; }
+  background: #6cf25a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #49588b; }
+  background: #a3860d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #296435; }
+  background: #1cd708; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #10c436; }
+  background: #2a8465; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #46d738; }
+  background: #e4d018; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0c185c; }
+  background: #89ffd4; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d29409; }
+  background: #ab41df; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d4dc3f; }
+  background: #d1e099; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3d122a; }
+  background: #f99aeb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ca7a35; }
+  background: #b572d9; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #53c1df; }
+  background: #8af28c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #973099; }
+  background: #f4aca4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f38649; }
+  background: #7492f0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4f489c; }
+  background: #ef4f0b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ecdd08; }
+  background: #840387; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c50c12; }
+  background: #67907d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #535e8b; }
+  background: #740c16; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d38586; }
+  background: #7fc082; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b5f35a; }
+  background: #4690bc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d3b808; }
+  background: #0a80e7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bc5ad4; }
+  background: #bc79ac; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #097d3a; }
+  background: #f5c0a3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2771c5; }
+  background: #2fcf3e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5cd693; }
+  background: #d08840; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #66062c; }
+  background: #0e8765; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #62f89f; }
+  background: #52e5b0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e1d304; }
+  background: #650a77; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #24713e; }
+  background: #4dc002; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5e988a; }
+  background: #2d6155; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #878146; }
+  background: #53583c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cff739; }
+  background: #de3b40; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #301cbe; }
+  background: #8979e9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b42d3c; }
+  background: #5a858a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ecd90c; }
+  background: #26f7ab; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7dbcbc; }
+  background: #418e94; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #213280; }
+  background: #387896; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1d17ea; }
+  background: #1f33e5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9396f6; }
+  background: #039519; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #59254f; }
+  background: #22e1f9; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #fbadcb; }
+  background: #184230; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #91b60d; }
+  background: #8f107b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #21ca9b; }
+  background: #c445c5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3feb83; }
+  background: #c0ce6e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ba2109; }
+  background: #c28c36; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #294ae8; }
+  background: #6074d0; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2f2051; }
+  background: #c9b369; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bd1580; }
+  background: #a2357d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #661344; }
+  background: #a2bdd1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #892cf1; }
+  background: #7f4ba6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2a07c9; }
+  background: #9e08c3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5368ac; }
+  background: #184e8e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #fb040d; }
+  background: #ef2fca; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #8ad206; }
+  background: #1351ab; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #be3b71; }
+  background: #cc638b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #048b85; }
+  background: #2fc56b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #094b6e; }
+  background: #426de0; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #84c709; }
+  background: #4d8a58; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #12dfbd; }
+  background: #90e4dc; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e94d31; }
+  background: #f6877b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d94814; }
+  background: #649291; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e22560; }
+  background: #cfda2e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #665691; }
+  background: #e874fc; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3066a7; }
+  background: #b4ccf7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #40d21e; }
+  background: #d1aa94; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #680faf; }
+  background: #6ba788; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cfe39e; }
+  background: #ffeed3; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #478259; }
+  background: #80d0ce; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #df34c0; }
+  background: #f0bb68; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c13ea6; }
+  background: #d27689; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #77707e; }
+  background: #a9a00e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b97e29; }
+  background: #8fbd16; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #18e25b; }
+  background: #77a84d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #819f9a; }
+  background: #07f24a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8e5395; }
+  background: #e97202; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #cb3b9b; }
+  background: #c72eb2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #13809b; }
+  background: #df6452; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13944,7 +13944,7 @@ input:checked + .sliders:before {
     font-size: 12px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
     width: 30px !important;
-    padding: 4px 4px 3px; }
+    padding: 2px 4px 0px 0px; }
 
 .query-wizard-exp-contents .query-wizard-expension {
   display: flex !important;
@@ -13956,6 +13956,8 @@ input:checked + .sliders:before {
     margin-left: 10px !important;
     margin-right: 10px !important;
     padding: 0px; }
+    .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img::after {
+      right: 5px !important; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos li::before {
     display: none !important; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn {
@@ -15351,7 +15353,7 @@ li:hover {
     .sliding-section .sliding-left-section .device-filterleft-bar {
       margin-top: 100px; }
       .sliding-section .sliding-left-section .device-filterleft-bar .filter-icon-group {
-        margin-right: 12px;
+        margin-right: 14px;
         width: 18px; }
     .sliding-section .sliding-left-section .nav-pills .nav-link {
       text-decoration: none;
@@ -15934,7 +15936,7 @@ option {
 .system-settings-wrapper .sliding-left-section .device-filterleft-bar {
   margin-top: 0px; }
   .system-settings-wrapper .sliding-left-section .device-filterleft-bar .filter-icon-group {
-    width: 18px; }
+    width: 22px; }
 .system-settings-wrapper .sliding-left-section .nav-pills .nav-link {
   margin: 0px !important; }
 .system-settings-wrapper .tabs-aggre button {
@@ -16698,9 +16700,14 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .query-wizard-exp-contents .flex-sub-framework-box {
   justify-content: flex-start !important; }
+  .query-wizard-exp-contents .flex-sub-framework-box .close-actions {
+    margin: 0px;
+    margin-left: -8px; }
+  .query-wizard-exp-contents .flex-sub-framework-box div + div a {
+    margin: 0px 5px; }
 
 .flex-sub-framework-box .flex-sub-row-container {
-  margin-left: 44.5%; }
+  margin-left: 418px; }
   .flex-sub-framework-box .flex-sub-row-container::after {
     top: -20px !important;
     height: 108px !important; }
@@ -16723,7 +16730,7 @@ input:not(:checked) + .slider-switch > .switch-non {
     position: absolute;
     border: 1px solid #776fff;
     top: -18px;
-    left: 56.4%; }
+    left: 535px; }
   .flex-sub-framework-toggle-btn .query-toggle-btn-div {
     margin-left: 52.5%;
     padding: 0px; }
@@ -16742,7 +16749,8 @@ input:not(:checked) + .slider-switch > .switch-non {
   .dropdown-with-img-small .dropdown-with-img-select div + div {
     font-size: 15px !important; }
   .dropdown-with-img-small .dropdown-with-img-select .dropdown-logo img {
-    width: 26px !important; }
+    width: 26px !important;
+    padding: 6px; }
 
 .dropdown-with-img li {
   display: flex !important;
@@ -16756,7 +16764,8 @@ input:not(:checked) + .slider-switch > .switch-non {
     width: 14px; }
 
 .query-wizard-exp-contents-new .query-wizard-dropdown-large {
-  width: 134px !important; }
+  width: 134px !important;
+  background-position-x: 95%; }
 
 .qw-input {
   width: 64px;
@@ -16766,7 +16775,10 @@ input:not(:checked) + .slider-switch > .switch-non {
   height: 32px; }
 
 .dropdown-border-div {
-  border: 1px solid #cccccc; }
+  border: 1px solid #cccccc;
+  padding-top: 10px; }
+  .dropdown-border-div li {
+    padding: 5px 0px; }
 
 .dropdown-scroll-div {
   height: 200px;
@@ -16775,6 +16787,21 @@ input:not(:checked) + .slider-switch > .switch-non {
 
 .dropdown-with-img-input .dropdown-with-logos:hover {
   border: 1px solid #cccccc; }
+
+.hori-tabs-top-wrapper {
+  border-bottom: 4px solid #C4C4C4; }
+  .hori-tabs-top-wrapper li {
+    margin-right: 6px; }
+    .hori-tabs-top-wrapper li .nav-link {
+      display: block;
+      padding: 0.8rem 2.3rem;
+      background: #F4F4F4;
+      color: #4C4C4C;
+      text-decoration: none;
+      font-weight: 600; }
+    .hori-tabs-top-wrapper li .active {
+      color: #fff;
+      background: #C4C4C4 !important; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
@@ -17059,6 +17086,9 @@ input:not(:checked) + .slider-switch > .switch-non {
         width: 300px; }
       .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
         width: 106px; }
+
+  .dropdown-with-img-input {
+    width: 180px !important; }
 
   .policy-btns-wrapper {
     display: flex;
