--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -388,7 +388,9 @@
             }
         }
     }
-
+    .dropdown-with-img-input {
+        width: 180px !important; 
+    }
     .policy-btns-wrapper {
         display: flex;
         flex-direction: column;
