--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f3bdb1; }
+  background: #22a385; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #bf0774; }
+  background: #e559b6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e9d41c; }
+  background: #ef28ed; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8bc361; }
+  background: #ad39e1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e78cf9; }
+  background: #7b4a0b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d356e0; }
+  background: #f2a4fd; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #959911; }
+  background: #2a64c4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ef4c28; }
+  background: #6e86ff; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3af650; }
+  background: #19383f; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #67acca; }
+  background: #821ab5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f648bf; }
+  background: #33fbad; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #85b4db; }
+  background: #81914c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a9f9af; }
+  background: #651795; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0adae4; }
+  background: #6d0239; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #eac565; }
+  background: #9e0914; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #20b233; }
+  background: #0cdfc1; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9e9a16; }
+  background: #9abe71; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f3a25c; }
+  background: #98a8cf; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a294c9; }
+  background: #b5adcf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #70a569; }
+  background: #94d38b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #90a1bd; }
+  background: #256c24; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1d7355; }
+  background: #fd3bc7; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #20a3a4; }
+  background: #36545f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #88c3a8; }
+  background: #f21746; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6cf25a; }
+  background: #37db59; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a3860d; }
+  background: #3cb2da; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1cd708; }
+  background: #79b952; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2a8465; }
+  background: #49a37a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e4d018; }
+  background: #c1d4d1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #89ffd4; }
+  background: #bf72f0; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ab41df; }
+  background: #6b1d51; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d1e099; }
+  background: #714777; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f99aeb; }
+  background: #740d6e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b572d9; }
+  background: #f753a3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8af28c; }
+  background: #c13d30; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f4aca4; }
+  background: #e01214; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7492f0; }
+  background: #bb549c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ef4f0b; }
+  background: #c2f3bf; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #840387; }
+  background: #e2f08c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #67907d; }
+  background: #f6227d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #740c16; }
+  background: #628463; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #7fc082; }
+  background: #89ae0f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4690bc; }
+  background: #3de6b0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #0a80e7; }
+  background: #c683d5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bc79ac; }
+  background: #dad5f8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f5c0a3; }
+  background: #048ef7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2fcf3e; }
+  background: #62fe28; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d08840; }
+  background: #c6087c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0e8765; }
+  background: #f90419; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #52e5b0; }
+  background: #dedff8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #650a77; }
+  background: #791bff; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4dc002; }
+  background: #5360a9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2d6155; }
+  background: #e3cd63; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #53583c; }
+  background: #b60c06; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #de3b40; }
+  background: #21f5f2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8979e9; }
+  background: #d952e4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5a858a; }
+  background: #2f6d9d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #26f7ab; }
+  background: #75aeee; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #418e94; }
+  background: #016afe; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #387896; }
+  background: #fc352c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1f33e5; }
+  background: #06bdc9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #039519; }
+  background: #65baf8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #22e1f9; }
+  background: #745c46; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #184230; }
+  background: #90755d; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8f107b; }
+  background: #463922; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #c445c5; }
+  background: #291b54; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c0ce6e; }
+  background: #80a81e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c28c36; }
+  background: #469a8d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6074d0; }
+  background: #a5a35c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c9b369; }
+  background: #bdc48f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a2357d; }
+  background: #42d935; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #a2bdd1; }
+  background: #da80a3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #7f4ba6; }
+  background: #073583; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9e08c3; }
+  background: #53c7eb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #184e8e; }
+  background: #261a7e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ef2fca; }
+  background: #024e08; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1351ab; }
+  background: #8dbda3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cc638b; }
+  background: #fc0a4c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2fc56b; }
+  background: #07862a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #426de0; }
+  background: #88d6ce; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4d8a58; }
+  background: #450631; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #90e4dc; }
+  background: #87a034; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f6877b; }
+  background: #739662; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #649291; }
+  background: #e39aa0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #cfda2e; }
+  background: #571abd; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e874fc; }
+  background: #cf96ef; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b4ccf7; }
+  background: #d733f8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d1aa94; }
+  background: #a5e419; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6ba788; }
+  background: #d9f0a9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ffeed3; }
+  background: #3a5e07; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #80d0ce; }
+  background: #fe4046; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f0bb68; }
+  background: #87d1fe; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d27689; }
+  background: #8fc8c7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a9a00e; }
+  background: #d90ef1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8fbd16; }
+  background: #c572c8; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #77a84d; }
+  background: #028f72; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #07f24a; }
+  background: #5b2b90; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e97202; }
+  background: #5a89f7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c72eb2; }
+  background: #da135f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #df6452; }
+  background: #0c9b78; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
