--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4929,3 +4929,6 @@ height: 300px;
   }
   }
 }
+.select-arrow-div .custom-select {
+  background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 15px !important;
+}
