--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #22a385; }
+  background: #f21a23; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e559b6; }
+  background: #1f5db2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ef28ed; }
+  background: #c731ec; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ad39e1; }
+  background: #05337b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7b4a0b; }
+  background: #b414a2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f2a4fd; }
+  background: #46b89d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #2a64c4; }
+  background: #cb2f3e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6e86ff; }
+  background: #b3d945; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #19383f; }
+  background: #de3225; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #821ab5; }
+  background: #b34de3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #33fbad; }
+  background: #32cd69; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #81914c; }
+  background: #72312f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #651795; }
+  background: #1f9d67; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6d0239; }
+  background: #30f985; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #9e0914; }
+  background: #df9a97; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0cdfc1; }
+  background: #1204ed; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9abe71; }
+  background: #de5547; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #98a8cf; }
+  background: #bbc7cc; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b5adcf; }
+  background: #a922fd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #94d38b; }
+  background: #6ff236; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #256c24; }
+  background: #2e9f2a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fd3bc7; }
+  background: #ca080d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #36545f; }
+  background: #8e30a5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f21746; }
+  background: #4c8759; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #37db59; }
+  background: #3e1445; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3cb2da; }
+  background: #1bbec0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #79b952; }
+  background: #af742c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #49a37a; }
+  background: #8e3d46; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c1d4d1; }
+  background: #fe284d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #bf72f0; }
+  background: #72fdee; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6b1d51; }
+  background: #131102; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #714777; }
+  background: #33f9df; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #740d6e; }
+  background: #6ee276; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f753a3; }
+  background: #aef868; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c13d30; }
+  background: #7548f3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e01214; }
+  background: #27f27b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bb549c; }
+  background: #eed290; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c2f3bf; }
+  background: #068465; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e2f08c; }
+  background: #e5687c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f6227d; }
+  background: #a416ec; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #628463; }
+  background: #453ecd; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #89ae0f; }
+  background: #925227; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3de6b0; }
+  background: #9bdfcb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c683d5; }
+  background: #8086e0; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #dad5f8; }
+  background: #0afad2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #048ef7; }
+  background: #f8cec5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #62fe28; }
+  background: #81e9f7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c6087c; }
+  background: #970de3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f90419; }
+  background: #57536a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #dedff8; }
+  background: #8ec0de; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #791bff; }
+  background: #6e7506; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5360a9; }
+  background: #a16633; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e3cd63; }
+  background: #3671a2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b60c06; }
+  background: #8255ae; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #21f5f2; }
+  background: #a47990; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d952e4; }
+  background: #1a4933; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2f6d9d; }
+  background: #530820; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #75aeee; }
+  background: #cc5809; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #016afe; }
+  background: #8f1057; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fc352c; }
+  background: #394725; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #06bdc9; }
+  background: #c5563f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #65baf8; }
+  background: #cbb54c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #745c46; }
+  background: #9562bd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #90755d; }
+  background: #98e88b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #463922; }
+  background: #33fe30; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #291b54; }
+  background: #539ff8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #80a81e; }
+  background: #666a5f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #469a8d; }
+  background: #394b01; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a5a35c; }
+  background: #44e530; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bdc48f; }
+  background: #9a48c4; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #42d935; }
+  background: #760eaa; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #da80a3; }
+  background: #5837c5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #073583; }
+  background: #259aeb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #53c7eb; }
+  background: #f938f2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #261a7e; }
+  background: #02faf1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #024e08; }
+  background: #f02d24; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #8dbda3; }
+  background: #1d5608; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fc0a4c; }
+  background: #3413a1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #07862a; }
+  background: #e57c8d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #88d6ce; }
+  background: #f54581; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #450631; }
+  background: #19ac80; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #87a034; }
+  background: #59142f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #739662; }
+  background: #6ac3cb; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e39aa0; }
+  background: #1c8fdd; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #571abd; }
+  background: #4cfe68; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #cf96ef; }
+  background: #034f22; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d733f8; }
+  background: #f55396; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a5e419; }
+  background: #a32c78; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d9f0a9; }
+  background: #8d6f8a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3a5e07; }
+  background: #91f4a6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fe4046; }
+  background: #f79787; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #87d1fe; }
+  background: #d2f425; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8fc8c7; }
+  background: #a8e6b9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d90ef1; }
+  background: #949f8d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c572c8; }
+  background: #f307bd; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #028f72; }
+  background: #22db68; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5b2b90; }
+  background: #0836f7; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #5a89f7; }
+  background: #7899bf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #da135f; }
+  background: #712a7d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0c9b78; }
+  background: #6a8b15; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11150,10 +11150,10 @@ input:read-only {
   margin: 0px 5px; }
 
 .standard-table .td-center a img {
-  width: 14px; }
+  width: 18px; }
 
 .standard-table .td-center img {
-  width: 14px; }
+  width: 18px; }
 
 .standard-table .td-center a {
   margin: 0px 3px; }
@@ -16802,6 +16802,9 @@ input:not(:checked) + .slider-switch > .switch-non {
     .hori-tabs-top-wrapper li .active {
       color: #fff;
       background: #C4C4C4 !important; }
+
+.select-arrow-div .custom-select {
+  background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 15px !important; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
